# Classes

./: .gitattributes  .gitignore  README.md
BUS200/: README.md
CALC 1/: .gitignore  README.md
CMPT225/: CMPT 225 Assignments 1.html  CMPT 225 Assignments 2.html  CMPT 225 Assignments 3.html  CMPT 225 Assignments 4.html  CMPT 225 Assignments 5.html  CMPT 225 Labs 1.html  CMPT 225 Labs 2.html  CMPT 225 Labs 3.html  CMPT 225 Labs 4.html  CMPT 225 Labs 5.html  CMPT 225 Labs 6.html  CMPT 225 Labs 7.html  CMPT225.markdown  README.md
CMPT295/: README.md
CMPT318/: CMPT 318 Report.docx  CMPT 318 notes.docx  README.md
CMPT419/: Readme.md
CMPT419/Robotic Autonomy/Assigment 3/python_ekf/: CMakeLists.txt  package.xml
CMPT419/Robotic Autonomy/Assigment 3/python_ekf/launch/: start_ekf.launch
CMPT419/Robotic Autonomy/Assigment 3/python_ekf/src/: ekf.py  visualizer.py
CPSC1045/: README.md
CPSC1150/: ArithmeticCalculator.java  DaysInMonth.java  PhoneKeyPads.java  README.md  test.java
CPSC1181/: mergeSort.java  mergeSortMultiThreaded.java  quickMaths.java  randnumbersInRange.java  readme.md
High School Java/: App.java  BattleShip.java  BattleShipAI.java  BubbleSortAlg.java  CalConverter.java  CalculatorV1.java  CalculatorV2.java  CalculatorV3.java  CalculatorV5.java  ClipboardTool.java  Exercise_05_20.java  Exercise_05_25.java  Exercise_05_26.java  Factor.java  GuessTheNumberAI.java  InclinePlaneCalq.java  LICENSE  MasterMind.java  Mem.java  Notepad.java  README.md  ShortAndShuffle.java  Smm.java  TJWgui.java  Test.java  TheJollyWatcher.java  fact.java  keytester.java  (+7 more)
(+375 files in other folders)
