<?xml version="1.0"?>
<package format="2">
  <name>python_ekf</name>
  <version>0.0.0</version>
  <description>The python_ekf package</description>
  <maintainer email="kpardhan@sfu.ca">Khizr Ali Pardhan</maintainer>


  <license>foobar</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>

  </export>
</package>
